--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -17,17 +17,24 @@
   flex-grow: 2;
   padding: 10px;
   width: 10em;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .new-day .day {
-  font-size: xx-small;
+  font-weight: bold;
+  text-align: center;
 }
 
 .hour {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   width: 2em;
-  flex-grow: 1;
   border: 1px solid #ddd;
-  text-align: center;
   padding: 10px;
 }
 
