--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -5,9 +5,9 @@ body {
 }
 
 #app {
-    margin-left: auto;
-    margin-right: auto;
-    width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
 }
 
 table.strips {
@@ -18,6 +18,8 @@ table.strips {
 .strips .name {
   padding-right: 5px;
   width: 6%;
+  text-align: right;
+  border-right: 1px solid #ccc;
 }
 
 .strips .name .continent {
@@ -51,6 +53,7 @@ table.strips {
 }
 
 td.new-day {
+  border: 1px solid #ccc;
   width: 3%;
   background: #ddd;
 }
