--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -15,6 +15,12 @@ table.strips {
   width: 100%;
 }
 
+@media screen and (max-width: 480px) {
+  table.strips {
+    width: 400%;
+  }
+}
+
 .strips .name {
   padding-right: 5px;
   width: 6%;
