--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -2,12 +2,31 @@
 
 body {
   font-family: 'Work Sans', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 #app {
+
+}
+
+.main {
   margin-left: auto;
   margin-right: auto;
   width: 90%;
+}
+
+.header {
+  background: #222C38;
+  border-bottom: 2px solid #3EB4FB;
+  margin-bottom: 10px;
+}
+
+.header .title {
+  font-size: large;
+  font-weight: bold;
+  color: #fff;
+  padding: 15px;
 }
 
 table.strips {
